src/test/deca/syntax/parser/invalid/class_extends_without_keyword.deca
// Test parser, oublie du keyword extends pour étendre

class A {

}

class B A {

}